Apply pre-commit hooks

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = legend-testdata
+name = legend_testdata
 description = Python package for accessing LEGEND test data
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -14,10 +14,12 @@ classifiers =
     Intended Audience :: Information Technology
     Intended Audience :: Science/Research
     License :: OSI Approved :: BSD License
+    License :: OSI Approved :: MIT License
     Operating System :: MacOS
     Operating System :: POSIX
     Operating System :: Unix
     Programming Language :: Python
+    Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
@@ -45,3 +47,6 @@ where = src
 test =
     coverage
     pytest>=6.0
+
+[flake8]
+extend-ignore = E203, E501
