Various packaging updates

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,6 @@ classifiers =
     Intended Audience :: Developers
     Intended Audience :: Information Technology
     Intended Audience :: Science/Research
-    License :: OSI Approved :: BSD License
     License :: OSI Approved :: MIT License
     Operating System :: MacOS
     Operating System :: POSIX
@@ -45,8 +44,8 @@ where = src
 
 [options.extras_require]
 test =
-    coverage
     pytest>=6.0
+    pytest-cov
 
 [flake8]
 extend-ignore = E203, E501
