--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,12 +23,6 @@ repos:
   - id: requirements-txt-fixer
   - id: trailing-whitespace
 
-- repo: https://github.com/Carreau/velin.git
-  rev: "0.0.12"
-  hooks:
-    - id: velin
-      args: ["--check", "--write"]
-
 - repo: https://github.com/asottile/setup-cfg-fmt
   rev: "v2.0.0"
   hooks:
@@ -46,10 +40,16 @@ repos:
     args: ["--py36-plus"]
 
 - repo: https://github.com/psf/black
-  rev: "22.6.0"
+  rev: "22.8.0"
   hooks:
   - id: black
-    args: ["--skip-string-normalization"]
+
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: "v0.971"
+  hooks:
+    - id: mypy
+      files: src
+      stages: [manual]
 
 - repo: https://github.com/hadialqattan/pycln
   rev: "v2.1.1"
@@ -58,10 +58,23 @@ repos:
     args: ["--all"]
 
 - repo: https://github.com/PyCQA/flake8
-  rev: "5.0.2"
+  rev: "5.0.4"
   hooks:
   - id: flake8
-    additional_dependencies: [flake8-bugbear, flake8-print]
+    additional_dependencies: [
+      flake8-bugbear,
+      flake8-print,
+      flake8-docstrings,
+      pep8-naming
+    ]
+    args: ["--docstring-convention", "numpy"]  # or google, change me
+
+- repo: https://github.com/kynan/nbstripout
+  rev: "0.6.0"
+  hooks:
+    - id: nbstripout
+      args: ["--strip-empty-cells",
+             "--extra-keys", "metadata.kernelspec metadata.language_info"]
 
 - repo: https://github.com/mgedmin/check-manifest
   rev: "0.48"
@@ -70,10 +83,10 @@ repos:
     stages: [manual]
 
 - repo: https://github.com/codespell-project/codespell
-  rev: "v2.1.0"
+  rev: "v2.2.1"
   hooks:
   - id: codespell
-    args: ["-L", "hist,gaus,nd,ans,crate,nin,puls,spms"]
+    args: ["-L", "nd,unparseable,compiletime"]
 
 - repo: https://github.com/shellcheck-py/shellcheck-py
   rev: "v0.8.0.4"
@@ -83,6 +96,13 @@ repos:
 - repo: https://github.com/pre-commit/pygrep-hooks
   rev: "v1.9.0"
   hooks:
+  - id: python-no-log-warn
   - id: rst-backticks
   - id: rst-directive-colons
   - id: rst-inline-touching-normal
+
+- repo: https://github.com/pre-commit/mirrors-prettier
+  rev: "v3.0.0-alpha.0"
+  hooks:
+    - id: prettier
+      types_or: [json]
