--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = legend_testdata
+name = pylegendtestdata
 description = Python package for accessing LEGEND test data
 long_description = file: README.md
 long_description_content_type = text/markdown
