--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,8 @@ zip_safe = False
 where = src
 
 [options.extras_require]
+all =
+    pylegendtestdata[test]
 test =
     pre-commit
     pytest>=6.0
