--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,3 +52,5 @@ jobs:
           coverage run -m pytest
       - name: Upload Coverage to codecov.io
         uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
